# ExeTera

./: .gitignore  .readthedocs.yaml  README.md  analytics.py  check_covid_progression.py  check_health_status.py  check_height_weight_bmi.py  check_version.py  cleaning.py  covid_schema.json  data_schema.py  data_schemas.py  dataset.py  geo_mismatches.py  import.py  numpy_buffer.py  parsing_schemas.py  persistence.py  pipeline.py  postprocess.py  process_tests.py  pyproject.toml  regression.py  requirements.txt  runtests.sh  setup.py  split.py  utils.py  validate.py  version.py
ancillary_scripts/: check_active_gender_age.py  check_age_ranges.py  check_anomolous_covid_progression.py  check_assessment_fieldtypes.py  check_covid_progression.py  check_covid_tests.py  check_datetime_lengths.py  check_diabetes.py  check_distinct_values.py  check_fields.py  check_file_deltas.py  check_general_performance.py  check_had_covid_test.py  check_hdf5.py  check_height_width_bmi.py  check_missing.py  check_other_symptoms.py  check_past_symptoms.py  check_patient_fieldtypes.py  check_patients_with_supp.py  check_pregnant.py  check_snapshot_deltas.py  check_sort_performance.py  check_version.py  check_versions.py  check_versions_over_past_week.py  israel_model_validation_gen.py  standardargs.py  summarise_immediately_unhealthy.py  summarise_patient_stats.py  summarise_test_stats.py
contrib/: dataset_parameters.py
core/: dataset.py  exporter.py  importer.py  persistence.py  regression.py  split.py  utils.py
covidspecific/: data_schemas.py  geo_mismatches.py  importer.py  pipeline.py  postprocess.py  process_tests.py  utils.py  validate.py
docs/: basic_concepts.md  basic_examples.md  change_log.md  conf.py  dataframe.md  dataste.md  datatypes.md  exetera.bin.rst  exetera.core.rst  exetera.io.rst  exetera.processing.rst  exetera.rst  exetera_r.md  field.md  import_csv_file.md  index.rst  intermediate_examples.md  requirements.txt  roadmap.md  session.md  view.md  whatisexetera.md
examples/: README.md  advanced_operations.ipynb  assessments.csv  basic_concept.ipynb  import_dataset.ipynb  names_dataset.ipynb  simple_linked_dataset.ipynb  user_assessments.json  users.csv
exetera/: __init__.py  _version.py
hystore/: __init__.py
processing/: age_from_year_of_birth.py  analytics.py  assessment_merge.py  convert_old_assessments.py  covid_test.py  temperature.py  (+4 more)
(+160 files in other folders)
