
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exetera"
description = "High-volume key-value store and analytics, based on hdf5"
license = {text = "Apache 2.0 License, see LICENSE.txt"}
dependencies = ["numpy", "pandas", "h5py", "numba", "parameterized"]
requires-python = ">=3.7"
authors = [{ name = "Ben Murray", email = "benjamin.murray@kcl.ac.uk" }]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/kcl-bmeis/ExeTera"

[project.scripts]
exetera = "exetera.bin.exetera:main"

[tool.setuptools.packages.find]
include = ["exetera*"]

[tool.setuptools.dynamic]
version = {attr = "exetera._version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[metadata]
description-file = "README.md"
